# Search-y

./: README.md
Heter_in/: pyproject.toml
Heter_in/src/heter/: __init__.py  heter.py
Heter_in/tests/: test_heter.py
Searchy/: README.md  pyproject.toml
Searchy/src/searchy/: __init__.py  searchy.py
Searchy/src/shever/: shever.py
Searchy/tests/: test_hever.py  test_search.py
Shever_in/: .gitignore  LICENSE  README.md  pyproject.toml
Shever_in/src/shever/: __init__.py
