[build-system]
requires = ["hatchling>=1.13.0"]
build-backend = "hatchling.build"

[project]
name = "Search-y"
dynamic = ["version"]
authors = [
    {name = "Samuel Prevideli", email = "samuelprevideli@gmail.com"}
]
requires-python = ">= 3.10"
readme = "README.md"
description = "A recursive, ultra-memory-efficient file searcher using Python generators."
keywords = ["search", "generator", "os.scandir", "recursive", "files"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/S4muel-inz/Search-y.git"

# --- CONFIGURAÇÕES DO HATCHLING ---

[tool.hatch.version]
path = "src/searchy/__init__.py"

[tool.hatch.build.targets.wheel]
# Isso garante que apenas o conteúdo de 'src' seja empacotado
packages = ["src/searchy"]

[tool.hatch.build.targets.sdist]
# Isso evita que a pasta de testes seja enviada para o PyPI (usuário final)
exclude = ["/tests"]

# --- OPCIONAL: AMBIENTE DE TESTES ---

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"